--- a/html/index.html
+++ b/html/index.html
@@ -260,7 +260,7 @@
                         </li>
                     </ul>
                     <div class="more">
-                        <a href="#" class="btn-more">More</a>
+                        <a href="./catSearch.html" class="btn-more">More</a>
                     </div>
                 </div>
             </div>
@@ -370,7 +370,7 @@
                         </li>
                     </ul>
                     <div class="more">
-                        <a href="#" class="btn-more">More</a>
+                        <a href="./halfway_house_search.html" class="btn-more">More</a>
                     </div>
                 </div>
             </div>
@@ -381,39 +381,29 @@
                         <h2>商城</h2>
                         <h3>Shopping Store</h3>
                     </div>
-                </div>
-            </div>
-
-            <div class="section">
-                <!-- 快速註冊 -->
-                <div class="quick-signUp">
-                    <form action="#" method="post">
-                        <table>
-                        </table>
-                    </form>
-                </div>
-                <!-- footer -->
-                <footer>
-                    <div class="container">
-                        <div class="follow">
-                            <div class="btns">
-                                <span>follow us on</span>
-                                <a href="#" class="btn facebook">
-                                    <i class="fa fa-facebook"></i>
-                                </a>
-                                <a href="#" class="btn youtube">
-                                    <i class="fa fa-youtube"></i>
-                                </a>
-                                <a href="#" class="btn twitter">
-                                    <i class="fa fa-twitter"></i>
-                                </a>
-                                <a href="#" class="btn google">
-                                    <i class="fa fa-google"></i>
-                                </a>
+                    <div class="prod"></div>
+                    <footer>
+                        <div class="container">
+                            <div class="follow">
+                                <div class="btns">
+                                    <span>follow us on</span>
+                                    <a href="#" class="btn facebook">
+                                        <i class="fa fa-facebook"></i>
+                                    </a>
+                                    <a href="#" class="btn youtube">
+                                        <i class="fa fa-youtube"></i>
+                                    </a>
+                                    <a href="#" class="btn twitter">
+                                        <i class="fa fa-twitter"></i>
+                                    </a>
+                                    <a href="#" class="btn google">
+                                        <i class="fa fa-google"></i>
+                                    </a>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </footer>
+                    </footer>
+                </div>
             </div>
         </div>
         <div class="signUpLightboxBlack"></div>
