--- a/html/halfMemCatHome.html
+++ b/html/halfMemCatHome.html
@@ -21,9 +21,9 @@
                 </td>
             </tr>
             <tr>
-                <th>喵喵的照片</th>
+                <th>喵喵的照片(可選擇多張)</th>
                 <td>
-                    <input type="file">
+                    <input type="file" multiple="multiple">
                 </td>
             </tr>
             <tr>
