--- a/html/halfMeminfo.html
+++ b/html/halfMeminfo.html
@@ -39,6 +39,12 @@
                 </td>
             </tr>
             <tr>
+                <th>中途之家的詳細圖片 (可選擇多張)</th>
+                <td>
+                    <input type="file" multiple="multiple">
+                </td>
+            </tr>
+            <tr>
                 <td colspan="2">
                     <button>確定修改</button>
                 </td>
