--- a/html/catContent.html
+++ b/html/catContent.html
@@ -8,18 +8,47 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="../css/catContent.css">
 	<script src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+	<script src="../js/signIn.js"></script>
 	<title>尋喵啟事</title>
 </head>
 
 <body>
-	<div class="signUpLightboxBlack"></div>
+	<div class="signUpLightboxBlack">
+	</div>
 	<div class="signUpLightbox" id="loginBox">
 		<i class="fa fa-times cancel"></i>
-		<div class="bgImg"></div>
-		<div id="formShape">
+		<div class="bgImg" id="bgImg"></div>
+		<div id="formShape1" class="formShape formShape1">
 			<div class="chioce">
-				<button id="halfMember">中途之家會員</button>
-				<button id="member" class="selected">一般會員</button>
+				<button id="halfMember1">中途之家會員</button>
+				<button id="member1" class="selected">一般會員</button>
+			</div>
+			<form action="#1" class="signUpForm" id="signInForm">
+				<br>
+				<br>
+				<br>
+				<br>
+				<label for="userId">會員帳號
+					<br>
+					<small>請輸入您的電子郵件</small>
+				</label>
+				<input type="email" id="userIdIn" required>
+				<br>
+				<label for="userPsw">會員密碼
+					<br>
+					<small>請輸入6~10碼英數字</small>
+				</label>
+				<input type="password" id="userPswIn" required>
+				<br>
+				<p class="signInUpPos">尚未成為會員嗎?
+					<span id="signIn2Up">點此註冊</span>
+				</p>
+			</form>
+		</div>
+		<div id="formShape2" class="formShape formShape2">
+			<div class="chioce">
+				<button id="halfMember2">中途之家會員</button>
+				<button id="member2" class="selected">一般會員</button>
 			</div>
 			<form action="#1" id="signUpForm">
 				<label for="userName">會員名稱
@@ -63,13 +92,12 @@
 					<input type="submit" id="loginBoxSubmit" class="formBtn formSubmitBtn" value="確認註冊">
 					<input type="reset" class="formBtn formSubmitBtn" value="清除重填">
 				</div>
+				<p class="signInUpPos">已經是會員了嗎?
+					<span id="signUp2In">點此登入</span>
+				</p>
 			</form>
-			<p class="signInUpPos">已經是會員了嗎?
-				<button id="signInUp">點此登入</button>
-			</p>
 		</div>
 	</div>
-	<script src="../js/signUp.js"></script>
 	<header>
 		<div class="logo">
 			<a href="index.html">
