--- a/html/signUp.html
+++ b/html/signUp.html
@@ -6,15 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>會員專區</title>
-    <link rel="stylesheet" href="../css/signUp.css">
     <script src="https://use.fontawesome.com/533f4a82f0.js"></script>
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+    <link rel="stylesheet" href="../css/signUp.css">
+    <script src="../js/signUp.js"></script>
 </head>
 
 <body>
+    <div class="hb">
+        <div class="hamburger" id="hamburger-6">
+            <span class="line"></span>
+            <span class="line"></span>
+            <span class="line"></span>
+        </div>
+    </div>
     <div class="signUpLightboxBlack"></div>
     <div class="signUpLightbox" id="loginBox">
-        <i class="fa fa-times cancel"></i>
         <div class="bgImg"></div>
         <div id="formShape">
             <div class="chioce">
@@ -64,12 +71,56 @@
                     <input type="reset" class="formBtn formSubmitBtn" value="清除重填">
                 </div>
             </form>
-            <p class="signInUpPos">已經是會員了嗎?
-                <button id="signInUp">點此登入</button>
-            </p>
         </div>
     </div>
-    <script src="../js/signUp.js"></script>
+    <header>
+        <div class="logo">
+            <a href="index.html">
+                <h1>
+                    <img src="../images/logo_white.png" alt="尋喵啟事" title="回首頁">
+                </h1>
+            </a>
+        </div>
+        <nav>
+            <ul>
+                <li>
+                    <a href="./catSearch.html">尋喵</a>
+                </li>
+                <li>
+                    <a href="./halfway_house_search.html">中途之家</a>
+                </li>
+                <li>
+                    <a href="./Cat_ShoppingStore.html" title="前往商城">商城</a>
+                </li>
+                <li>
+                    <a href="./forum.html">討論區</a>
+                </li>
+                <li>
+                    <a href="./member.html">會員專區</a>
+                </li>
+            </ul>
+        </nav>
+        <div class="icons">
+            <a href="#">
+                <i class="fa fa-shopping-cart fa-2x" aria-hidden="true"></i>
+            </a>
+            <a href="#" class="login">
+                <i class="fa fa-user-circle-o fa-2x" aria-hidden="true"></i>
+            </a>
+            <a href="#">
+                <i class="fa fa-heart-o fa-2x" aria-hidden="true"></i>
+                <span id="like">6</span>
+            </a>
+        </div>
+    </header>
+    <script>
+        $(document).ready(function () {
+            $(".hamburger").click(function () {
+                $(this).toggleClass("is-active");
+                $('header').toggleClass("active");
+            });
+        });
+    </script>
 </body>
 
 </html>
