--- a/html/index.html
+++ b/html/index.html
@@ -130,6 +130,12 @@
             <div class="section">
                 <!-- 分數遊戲 -->
                 <div class="game-point" id="game-point">
+                    <div class="door-left"></div>
+                    <div class="door-right"></div>
+                    <div class="door-start">
+                        <div class="door-start-text">領養前先過關此遊戲</div>
+                        <div class="door-start-btn">開始!</div>
+                    </div>
                     <div class="game-point-title">
                         <h2>適合養喵小孩嗎?</h2>
                         <h3>Precautions</h3>
@@ -273,9 +279,9 @@
                     </div>
                     <div class="ask">
                         <img src="../images/noticeGame/cat_speak.png" alt="">
-                     </div>
+                    </div>
                     <div class="boxcontainer">
-                        
+
                         <div id="leftbox">
                             <img src="../images/noticeGame/refrigerator.png" alt="" data-box="left" data-role="drag-drop-container">
                         </div>
