--- a/html/index.html
+++ b/html/index.html
@@ -66,45 +66,46 @@
                 <button id="halfMember2">中途之家會員</button>
                 <button id="member2" class="selected">一般會員</button>
             </div>
-            <form action="#1" id="signUpForm">
+            <form action="../php/signUp2mem.php" method="post" id="signUpForm" enctype="multipart/form-data">
                 <label for="userName">會員名稱
                     <br>
                     <small>不得多於8個中/英文字元</small>
                 </label>
-                <input type="text" id="userName" placeholder="請輸入您的名稱" required>
+                <input type="text" name="userName" id="userName" placeholder="請輸入您的名稱" required>
                 <br>
                 <label for="userId">會員帳號
                     <br>
                     <small>請輸入您的電子郵件</small>
                 </label>
-                <input type="email" id="userId" placeholder="請輸入您的電子郵件" required>
+                <input type="email" name="userId" id="userId" placeholder="請輸入您的電子郵件" required>
                 <br>
                 <label for="userPsw">會員密碼
                     <br>
                     <small>請輸入6~10碼英數字</small>
                 </label>
-                <input type="password" id="userPsw" placeholder="請輸入您的密碼" required>
+                <input type="password" name="userPsw" id="userPsw" placeholder="請輸入您的密碼" required>
                 <br>
                 <label for="userTel">聯絡電話
                     <br>
                 </label>
-                <input type="tel" id="userTel" placeholder="請輸入您的手機號碼" required>
+                <input type="tel" name="userTel" id="userTel" placeholder="請輸入您的手機號碼" required>
                 <br>
                 <label for="userBirth">會員生日
                     <br>
                 </label>
-                <input type="text" id="userBirth" placeholder="ex:19900101" required>
+                <input type="text" name="userBirth" id="userBirth" placeholder="ex:19900101" required>
                 <br>
                 <label for="userAddress">通訊地址
                     <br>
                 </label>
-                <input type="text" id="userAddress" placeholder="請輸入您的地址" required>
+                <input type="text" name="userAddress" id="userAddress" placeholder="請輸入您的地址" required>
                 <br>
                 <div class="chioce">
-                    <label for="userPhoto" class="formBtn" id="userPhotoLabel">
+                    <label for="userPhoto" class="formBtn" id="userPhotoLabel" required>
                         點我上傳您的大頭貼
                     </label>
-                    <input type="file" id="userPhoto" placeholder="您可以上傳您的檔案" value="file">
+                    <input type="hidden" name="MAX_FILE_SIZE" value="1024">
+                    <input type="file" name='image' id="userPhoto" placeholder="您可以上傳您的檔案" value="file">
                     <input type="submit" id="loginBoxSubmit" class="formBtn formSubmitBtn" value="確認註冊">
                     <input type="reset" class="formBtn formSubmitBtn" value="清除重填">
                 </div>
