--- a/html/index.html
+++ b/html/index.html
@@ -104,7 +104,7 @@
                     <label for="userPhoto" class="formBtn" id="userPhotoLabel" required>
                         點我上傳您的大頭貼
                     </label>
-                    <input type="hidden" name="MAX_FILE_SIZE" value="1024">
+                    <input type="hidden" name="MAX_FILE_SIZE" value="1000000">
                     <input type="file" name='image' id="userPhoto" placeholder="您可以上傳您的檔案" value="file">
                     <input type="submit" id="loginBoxSubmit" class="formBtn formSubmitBtn" value="確認註冊">
                     <input type="reset" class="formBtn formSubmitBtn" value="清除重填">
