--- a/html/halfway_house_detail.html
+++ b/html/halfway_house_detail.html
@@ -55,7 +55,7 @@
 	</header>
 	<div class="right">
 		<div class="breadcrumbs">
-			<a href="index.html" class="defaultBtn">尋喵啟事</a> >
+			<a href="../index.html" class="defaultBtn">尋喵啟事</a> >
 			<a href="halfway_house_search.html" class="defaultBtn">搜尋中途之家</a> >
 			<a href="halfway_house_detail.html" class="defaultBtn">讀貓園</a>
 		</div>
