--- a/html/signUp.html
+++ b/html/signUp.html
@@ -75,7 +75,7 @@
     </div>
     <header>
         <div class="logo">
-            <a href="index.html">
+            <a href="../index.html">
                 <h1>
                     <img src="../images/logo_white.png" alt="尋喵啟事" title="回首頁">
                 </h1>
