--- a/html/catContent.html
+++ b/html/catContent.html
@@ -100,7 +100,7 @@
 	</div>
 	<header>
 		<div class="logo">
-			<a href="index.html">
+			<a href="../index.html">
 				<h1>
 					<img src="../images/logo_white.png" alt="尋喵啟事" title="回首頁">
 				</h1>
@@ -141,7 +141,7 @@
 	<div class="right">
 		<div class="container container1">
 			<div class="breadcrumbs">
-				<a href="index.html" class="defaultBtn" title="前往首頁">尋喵啟事</a> >
+				<a href="../index.html" class="defaultBtn" title="前往首頁">尋喵啟事</a> >
 				<a href="catSearch.html" class="defaultBtn" title="前往尋喵">尋喵</a> >
 				<a href="catContent.html" class="defaultBtn" title="瀏覽喵航航">喵航航</a>
 			</div>
