--- a/html/catSearch.html
+++ b/html/catSearch.html
@@ -101,7 +101,7 @@
 	</div>
 	<header>
 		<div class="logo">
-			<a href="index.html" title="尋喵啟事">
+			<a href="../index.html" title="尋喵啟事">
 				<h1>
 					<img src="../images/logo_white.png" alt="尋喵啟事" title="前往首頁">
 				</h1>
