--- a/html/forum-p1.html
+++ b/html/forum-p1.html
@@ -10,7 +10,7 @@
 <body>
 	<header class="header">
 		<div class="logo">
-			<a href="index.html">
+			<a href="../index.html">
 				<h1>
 					<img src="../img/logo_white.png" alt="尋喵啟事">
 				</h1>
