--- a/html/halfway_house_search.html
+++ b/html/halfway_house_search.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="index.html">
+            <a href="../index.html">
                 <h1>
                     <img src="../images/logo_white.png" alt="尋喵啟事" title="回首頁">
                 </h1>
