--- a/html/signUp.html
+++ b/html/signUp.html
@@ -1,126 +1,85 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>會員專區</title>
-    <script src="https://use.fontawesome.com/533f4a82f0.js"></script>
-    <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-    <link rel="stylesheet" href="../css/signUp.css">
-    <script src="../js/signUp.js"></script>
-</head>
-
-<body>
-    <div class="hb">
-        <div class="hamburger" id="hamburger-6">
-            <span class="line"></span>
-            <span class="line"></span>
-            <span class="line"></span>
+<div class="signUpLightboxBlack"></div>
+<div class="signUpLightbox" id="loginBox">
+    <i class="fa fa-times cancel"></i>
+    <div class="bgImg" id="bgImg"></div>
+    <div id="formShape1" class="formShape formShape1">
+        <div class="chioce">
+            <button id="halfMember1">中途之家會員</button>
+            <button id="member1" class="selected">一般會員</button>
         </div>
+        <form action="#1" class="signUpForm" id="signInForm" autocomplete="off">
+            <br>
+            <br>
+            <br>
+            <br>
+            <label for="userId">會員帳號
+                <br>
+                <small>請輸入您的電子郵件</small>
+            </label>
+            <input type="email" id="userIdIn" required>
+            <br>
+            <label for="userPsw">會員密碼
+                <br>
+                <small>請輸入6~10碼英數字</small>
+            </label>
+            <input type="password" id="userPswIn" required>
+            <br>
+            <p class="signInUpPos">尚未成為會員嗎?
+                <span id="signIn2Up">點此註冊</span>
+            </p>
+        </form>
     </div>
-    <div class="signUpLightboxBlack"></div>
-    <div class="signUpLightbox" id="loginBox">
-        <div class="bgImg"></div>
-        <div id="formShape">
+    <div id="formShape2" class="formShape formShape2">
+        <div class="chioce">
+            <button id="halfMember2">中途之家會員</button>
+            <button id="member2" class="selected">一般會員</button>
+        </div>
+        <form action="php/signUp2mem.php" method="post" id="signUpForm" enctype="multipart/form-data" autocomplete="off">
+            <label for="userName">會員名稱
+                <br>
+                <small>不得多於8個中/英文字元</small>
+            </label>
+            <input type="text" name="userName" id="userName" placeholder="請輸入您的名稱" required>
+            <br>
+            <label for="userId">會員帳號
+                <br>
+                <small>請輸入您的電子郵件</small>
+            </label>
+            <input type="email" name="userId" id="userId" placeholder="請輸入您的電子郵件" required>
+            <br>
+            <label for="userPsw">會員密碼
+                <br>
+                <small>請輸入6~10碼英數字</small>
+            </label>
+            <input type="password" name="userPsw" id="userPsw" placeholder="請輸入您的密碼" required>
+            <br>
+            <label for="userTel">聯絡電話
+                <br>
+            </label>
+            <input type="tel" name="userTel" id="userTel" placeholder="請輸入您的手機號碼" required>
+            <br>
+            <label for="userBirth">會員生日
+                <br>
+            </label>
+            <input type="text" name="userBirth" id="userBirth" placeholder="ex:19900101" required>
+            <br>
+            <label for="userAddress">通訊地址
+                <br>
+            </label>
+            <input type="text" name="userAddress" id="userAddress" placeholder="請輸入您的地址" required>
+            <br>
             <div class="chioce">
-                <button id="halfMember">中途之家會員</button>
-                <button id="member" class="selected">一般會員</button>
+                <label for="userPhoto" class="formBtn" id="userPhotoLabel" required>
+                    點我上傳您的大頭貼
+                </label>
+                <input type="hidden" name="MAX_FILE_SIZE" value="1000000">
+                <input type="file" name='image' id="userPhoto" placeholder="您可以上傳您的檔案" value="file">
+                <input type="submit" id="loginBoxSubmit" class="formBtn formSubmitBtn" value="確認註冊">
+                <input type="reset" class="formBtn formSubmitBtn" value="清除重填">
             </div>
-            <form action="#1" id="signUpForm">
-                <label for="userName">會員名稱
-                    <br>
-                    <small>不得多於8個中/英文字元</small>
-                </label>
-                <input type="text" id="userName" placeholder="請輸入您的名稱" required>
-                <br>
-                <label for="userId">會員帳號
-                    <br>
-                    <small>請輸入您的電子郵件</small>
-                </label>
-                <input type="email" id="userId" placeholder="請輸入您的電子郵件" required>
-                <br>
-                <label for="userPsw">會員密碼
-                    <br>
-                    <small>請輸入6~10碼英數字</small>
-                </label>
-                <input type="password" id="userPsw" placeholder="請輸入您的密碼" required>
-                <br>
-                <label for="userTel">聯絡電話
-                    <br>
-                </label>
-                <input type="tel" id="userTel" placeholder="請輸入您的手機號碼" required>
-                <br>
-                <label for="userBirth">會員生日
-                    <br>
-                </label>
-                <input type="text" id="userBirth" placeholder="ex:19900101" required>
-                <br>
-                <label for="userAddress">通訊地址
-                    <br>
-                </label>
-                <input type="text" id="userAddress" placeholder="請輸入您的地址" required>
-                <br>
-                <div class="chioce">
-                    <label for="userPhoto" class="formBtn" id="userPhotoLabel">
-                        點我上傳您的大頭貼
-                    </label>
-                    <input type="file" id="userPhoto" placeholder="您可以上傳您的檔案" value="file">
-                    <input type="submit" id="loginBoxSubmit" class="formBtn formSubmitBtn" value="確認註冊">
-                    <input type="reset" class="formBtn formSubmitBtn" value="清除重填">
-                </div>
-            </form>
-        </div>
+            <p class="signInUpPos">已經是會員了嗎?
+                <span id="signUp2In">點此登入</span>
+            </p>
+        </form>
     </div>
-    <header>
-        <div class="logo">
-            <a href="../index.html">
-                <h1>
-                    <img src="../images/logo_white.png" alt="尋喵啟事" title="回首頁">
-                </h1>
-            </a>
-        </div>
-        <nav>
-            <ul>
-                <li>
-                    <a href="./catSearch.html">尋喵</a>
-                </li>
-                <li>
-                    <a href="./halfway_house_search.html">中途之家</a>
-                </li>
-                <li>
-                    <a href="./Cat_ShoppingStore.html" title="前往商城">商城</a>
-                </li>
-                <li>
-                    <a href="./forum.html">討論區</a>
-                </li>
-                <li>
-                    <a href="./member.html">會員專區</a>
-                </li>
-            </ul>
-        </nav>
-        <div class="icons">
-            <a href="#">
-                <i class="fa fa-shopping-cart fa-2x" aria-hidden="true"></i>
-            </a>
-            <a href="#" class="login">
-                <i class="fa fa-user-circle-o fa-2x" aria-hidden="true"></i>
-            </a>
-            <a href="#">
-                <i class="fa fa-heart-o fa-2x" aria-hidden="true"></i>
-                <span id="like">6</span>
-            </a>
-        </div>
-    </header>
-    <script>
-        $(document).ready(function () {
-            $(".hamburger").click(function () {
-                $(this).toggleClass("is-active");
-                $('header').toggleClass("active");
-            });
-        });
-    </script>
-</body>
-
-</html>
+</div>
