--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
                     <br>
                     <small>請輸入您的電子郵件</small>
                 </label>
-                <input type="email" id="userIdIn" required>
+                <input type="email" id="userIdIn" name="memId" required>
                 <br>
                 <label for="userPsw">會員密碼
                     <br>
                     <small>請輸入6~10碼英數字</small>
                 </label>
-                <input type="password" id="userPswIn" required>
+                <input type="password" id="userPswIn" name="memPsw" required>
                 <br>
                 <input type="submit" value="登入">
                 <p class="signInUpPos">尚未成為會員嗎?
