--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
                 </label>
                 <input type="password" id="userPswIn" name="memPsw" required>
                 <br>
-                <input type="submit" value="登入">
+                <div class="chioce">
+                    <input type="submit" class="formBtn formSubmitBtn" value="登入">
+                </div>
                 <p class="signInUpPos">尚未成為會員嗎?
                     <span id="signIn2Up">點此註冊</span>
                 </p>
@@ -108,7 +110,6 @@
                     <input type="hidden" name="MAX_FILE_SIZE" value="1000000">
                     <input type="file" name='image' id="userPhoto" placeholder="您可以上傳您的檔案" value="file">
                     <input type="submit" id="loginBoxSubmit" class="formBtn formSubmitBtn" value="確認註冊">
-                    <input type="reset" class="formBtn formSubmitBtn" value="清除重填">
                 </div>
                 <p class="signInUpPos">已經是會員了嗎?
                     <span id="signUp2In">點此登入</span>
