--- a/html/halfMem.html
+++ b/html/halfMem.html
@@ -22,19 +22,19 @@
         <nav>
             <ul>
                 <li>
-                    <a href="../catSearch.html">尋喵</a>
+                    <a href="../html/catSearch.html">尋喵</a>
                 </li>
                 <li>
-                    <a href="../halfway_house_search.php">中途之家</a>
+                    <a href="../php/halfway_house_search.php">中途之家</a>
                 </li>
                 <li>
-                    <a href="../Cat_ShoppingStore.html" title="前往商城">商城</a>
+                    <a href="../html/Cat_ShoppingStore.html" title="前往商城">商城</a>
                 </li>
                 <li>
-                    <a href="../forum.html">討論區</a>
+                    <a href="../html/forum.html">討論區</a>
                 </li>
                 <li>
-                    <a href="../member.html">會員專區</a>
+                    <a href="../html/member.html">會員專區</a>
                 </li>
             </ul>
         </nav>
@@ -80,7 +80,7 @@
                         <li onclick="getData('../php/halfMemAdopt.php');" class="li">
                             <i class="fa fa-chevron-circle-right" aria-hidden="true"></i> 審核領養案件
                         </li>
-                        <li onclick="getData('../php/halfMemSupport.php');" class="li">
+                        <li onclick="getData('../php/halfMemDonate.php');" class="li">
                             <i class="fa fa-chevron-circle-right" aria-hidden="true"></i> 編輯助養資訊
                         </li>
                     </ul>
@@ -110,7 +110,7 @@
                     <li onclick="getData('../php/halfMemAdopt.php');" class="li">
                         審核領養案件
                     </li>
-                    <li onclick="getData('../php/halfMemSupport.php');" class="li">
+                    <li onclick="getData('../php/halfMemDonate.php');" class="li">
                         編輯助養資訊
                     </li>
                 </ul>
