--- a/html/member.html
+++ b/html/member.html
@@ -10,7 +10,7 @@
     <script src="https://use.fontawesome.com/533f4a82f0.js"></script>
 </head>
 
-<body onload="getData('memInfo.html');">
+<body onload="getData('../php/memInfo.php');">
     <header>
         <div class="logo">
             <a href="../index.html">
@@ -22,19 +22,19 @@
         <nav>
             <ul>
                 <li>
-                    <a href="./catSearch.html">尋喵</a>
+                    <a href="../html/catSearch.html">尋喵</a>
                 </li>
                 <li>
-                    <a href="./halfway_house_search.html">中途之家</a>
+                    <a href="../php/halfway_house_search.php">中途之家</a>
                 </li>
                 <li>
-                    <a href="./Cat_ShoppingStore.html" title="前往商城">商城</a>
+                    <a href="../html/Cat_ShoppingStore.html" title="前往商城">商城</a>
                 </li>
                 <li>
-                    <a href="./forum.html">討論區</a>
+                    <a href="../html/forum.html">討論區</a>
                 </li>
                 <li>
-                    <a href="./member.html">會員專區</a>
+                    <a href="../html/member.html">會員專區</a>
                 </li>
             </ul>
         </nav>
@@ -62,10 +62,10 @@
                 </div>
                 <div class="leftlist">
                     <ul>
-                        <li onclick="getData('memInfo.html');" class="li">
+                        <li onclick="getData('../php/memInfo.php');" class="li">
                             <i class="fa fa-chevron-circle-right" aria-hidden="true"></i> 修改會員資料
                         </li>
-                        <li onclick="getData('memOrderlist.html');" class="li">
+                        <li onclick="getData('../php/memOrderlist.php');" class="li">
                             <i class="fa fa-chevron-circle-right" aria-hidden="true"></i> 查詢訂單記錄
                         </li>
                     </ul>
@@ -77,10 +77,10 @@
 
             <div class="smalllist">
                 <ul>
-                    <li onclick="getData('memInfo.html');" class="li">
+                    <li onclick="getData('../php/memInfo.php');" class="li">
                         修改會員資料
                     </li>
-                    <li onclick="getData('memOrderlist.html');" class="li">
+                    <li onclick="getData('../php/memOrderlist.php');" class="li">
                         查詢訂單記錄
                     </li>
                 </ul>
