--- a/html/header.html
+++ b/html/header.html
@@ -32,7 +32,7 @@
                     <a href="../catSearch.html">尋喵</a>
                 </li>
                 <li>
-                    <a href="../php/halfway_house_search.php">中途之家</a>
+                    <a href="../halfway_house_search.php">中途之家</a>
                 </li>
                 <li>
                     <a href="../Cat_ShoppingStore.html" title="前往商城">商城</a>
