--- a/html/Cat_ShoppingStore_cart.html
+++ b/html/Cat_ShoppingStore_cart.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Shopping Cart</title>
 
     <link rel="stylesheet" href="../css/animate.css">
 
@@ -116,7 +116,7 @@
     <div class="wrap">
         <div class="wrapCenter">
             <div class="title">
-                尋喵啟事購物車
+                購物車
                 <span>SHOPPING CART</span>
             </div>
         
@@ -131,7 +131,7 @@
                     </tr>
                 </table>
             </div>
-
+ 
 
             <div class="total" style="text-align:right;">
 				總共：<span id="subtotal">0</span>
