--- a/html/Cat_ShoppingStore.html
+++ b/html/Cat_ShoppingStore.html
@@ -203,7 +203,7 @@
 						</div>
 					</div>
 
-					<div class="product rwd">
+					<!-- <div class="product rwd">
 						<a href="#">
 							<div class="pic  wow zoomIn">
 								<img src="../img/food1.png">
@@ -218,7 +218,7 @@
 						<div class="cost">
 							$1000
 						</div>
-					</div>
+					</div> -->
 
 					<div class="typeBannerRWD  wow zoomIn">
 						<a href="Cat_ShoppingStore_food.html">前往
@@ -309,7 +309,7 @@
 						</div>
 					</div>
 
-					<div class="product rwd">
+					<!-- <div class="product rwd">
 						<a href="#">
 							<div class="pic  wow zoomIn">
 								<img src="../img/food1.png">
@@ -324,7 +324,7 @@
 						<div class="cost">
 							$1000
 						</div>
-					</div>
+					</div> -->
 
 					<div class="typeBannerRWD wow zoomIn">
 						<a href="#">前往
@@ -414,7 +414,7 @@
 						</div>
 					</div>
 
-					<div class="product rwd">
+					<!-- <div class="product rwd">
 						<a href="#">
 							<div class="pic  wow zoomIn">
 								<img src="../img/food1.png">
@@ -429,7 +429,7 @@
 						<div class="cost">
 							$1000
 						</div>
-					</div>
+					</div> -->
 
 					<div class="typeBannerRWD wow zoomIn">
 						<a href="#">前往
@@ -519,7 +519,7 @@
 						</div>
 					</div>
 
-					<div class="product rwd">
+					<!-- <div class="product rwd">
 						<a href="#">
 							<div class="pic  wow zoomIn">
 								<img src="../img/food1.png">
@@ -534,7 +534,7 @@
 						<div class="cost">
 							$1000
 						</div>
-					</div>
+					</div> -->
 
 					<div class="typeBannerRWD wow zoomIn">
 						<a href="#">前往
