--- a/html/Cat_ShoppingStore.html
+++ b/html/Cat_ShoppingStore.html
@@ -138,7 +138,7 @@
 					<div class="product">
 						<a href="Cat_ShoppingStore_product.html">
 							<div class="pic  wow zoomIn">
-								<img src="../img/food1.png">
+								<img src="../images/productPic/food1.jpg">
 							</div>
 						</a>
 
@@ -155,7 +155,7 @@
 					<div class="product">
 						<a href="#">
 							<div class="pic  wow zoomIn">
-								<img src="../img/food2.jpg">
+								<img src="../images/productPic/food2.jpg">
 							</div>
 						</a>
 
@@ -172,7 +172,7 @@
 					<div class="product rwd">
 						<a href="#">
 							<div class="pic  wow zoomIn">
-								<img src="../img/food3.JPG">
+								<img src="../images/productPic/food3.jpg">
 							</div>
 						</a>
 
@@ -189,7 +189,7 @@
 					<div class="product rwd">
 						<a href="#">
 							<div class="pic  wow zoomIn">
-								<img src="../img/food4.jpeg">
+								<img src="../images/productPic/food4.jpg">
 							</div>
 						</a>
 
@@ -244,7 +244,7 @@
 					<div class="product">
 						<a href="#">
 							<div class="pic  wow zoomIn">
-								<img src="../img/food1.png">
+								<img src="../images/productPic/home1.jpg">
 							</div>
 						</a>
 
@@ -261,7 +261,7 @@
 					<div class="product">
 						<a href="#">
 							<div class="pic  wow zoomIn">
-								<img src="../img/food2.jpg">
+								<img src="../images/productPic/home2.jpg">
 							</div>
 						</a>
 
@@ -278,7 +278,7 @@
 					<div class="product rwd">
 						<a href="#">
 							<div class="pic  wow zoomIn">
-								<img src="../img/food3.JPG">
+								<img src="../images/productPic/home3.jpg">
 							</div>
 						</a>
 
@@ -295,7 +295,7 @@
 					<div class="product rwd">
 						<a href="#">
 							<div class="pic  wow zoomIn">
-								<img src="../img/food4.jpeg">
+								<img src="../images/productPic/home4.jpg">
 							</div>
 						</a>
 
@@ -349,7 +349,7 @@
 					<div class="product">
 						<a href="#">
 							<div class="pic  wow zoomIn">
-								<img src="../img/food1.png">
+								<img src="../images/productPic/grass1.jpg">
 							</div>
 						</a>
 
@@ -366,7 +366,7 @@
 					<div class="product">
 						<a href="#">
 							<div class="pic  wow zoomIn">
-								<img src="../img/food2.jpg">
+								<img src="../images/productPic/grass2.jpg">
 							</div>
 						</a>
 
@@ -383,7 +383,7 @@
 					<div class="product rwd">
 						<a href="#">
 							<div class="pic  wow zoomIn">
-								<img src="../img/food3.JPG">
+								<img src="../images/productPic/grass3.jpg">
 							</div>
 						</a>
 
@@ -400,7 +400,7 @@
 					<div class="product rwd">
 						<a href="#">
 							<div class="pic  wow zoomIn">
-								<img src="../img/food4.jpeg">
+								<img src="../images/productPic/grass4.jpg">
 							</div>
 						</a>
 
@@ -454,7 +454,7 @@
 					<div class="product">
 						<a href="#">
 							<div class="pic  wow zoomIn">
-								<img src="../img/food1.png">
+								<img src="../images/productPic/play1.jpg">
 							</div>
 						</a>
 
@@ -471,7 +471,7 @@
 					<div class="product">
 						<a href="#">
 							<div class="pic  wow zoomIn">
-								<img src="../img/food2.jpg">
+								<img src="../images/productPic/play2.jpg">
 							</div>
 						</a>
 
@@ -488,7 +488,7 @@
 					<div class="product rwd">
 						<a href="#">
 							<div class="pic  wow zoomIn">
-								<img src="../img/food3.JPG">
+								<img src="../images/productPic/play3.jpg">
 							</div>
 						</a>
 
@@ -505,7 +505,7 @@
 					<div class="product rwd">
 						<a href="#">
 							<div class="pic  wow zoomIn">
-								<img src="../img/food4.jpeg">
+								<img src="../images/productPic/play4.jpg">
 							</div>
 						</a>
 
