漢堡 80% & index.html 改為 index.php

--- a/html/forum.html
+++ b/html/forum.html
@@ -11,7 +11,7 @@
 <body>
 	<header class="header">
 		<div class="logo">
-			<a href="../index.html">
+			<a href="../index.php">
 				<h1>
 					<img src="../img/logo_white.png" alt="尋喵啟事">
 				</h1>
