--- a/html/Cat_ShoppingStore.html
+++ b/html/Cat_ShoppingStore.html
@@ -32,7 +32,7 @@
 
 	<header>
 		<div class="logo">
-			<a href="../index.html">
+			<a href="../index.php">
 				<h1>
 					<img src="../images/logo_white.png" alt="尋喵啟事" title="回首頁">
 				</h1>
