--- a/html/Cat_ShoppingStore_product.html
+++ b/html/Cat_ShoppingStore_product.html
@@ -72,7 +72,7 @@
 
     <header>
         <div class="logo">
-            <a href="../index.html">
+            <a href="../index.php">
                 <h1>
                     <img src="../img/logo_white.png" alt="尋喵啟事" title="回首頁">
                 </h1>
