--- a/html/halfMem.html
+++ b/html/halfMem.html
@@ -13,7 +13,7 @@
 <body onload="getData('halfMeminfo.php');">
     <header>
         <div class="logo">
-            <a href="../index.html">
+            <a href="../index.php">
                 <h1>
                     <img src="../images/logo_white.png" alt="尋喵啟事" title="回首頁">
                 </h1>
