--- a/html/Cat_ShoppingStore_cart.html
+++ b/html/Cat_ShoppingStore_cart.html
@@ -115,10 +115,10 @@
 
     <div class="wrap">
         <div class="wrapCenter">
-            <div class="title">
+            <h2 class="title">
                 購物車
                 <span>SHOPPING CART</span>
-            </div>
+            </h2>
         
             <div id="cartList">
                 <table cellpadding="100px" border="5">
