--- a/html/Cat_ShoppingStore_food.html
+++ b/html/Cat_ShoppingStore_food.html
@@ -74,10 +74,10 @@
 
 	<div class="wrap">
 		<div class="wrapCenter">
-			<div class="title">
-				商城
-				<span>SHOPPING STORE</span>
-			</div>
+			<h2 class="title">
+				喵喵肚子餓
+				<span>FOOD</span>
+			</h2>
 
 			<div class="menu">
 
