--- a/html/Cat_ShoppingStore_product.html
+++ b/html/Cat_ShoppingStore_product.html
@@ -114,10 +114,10 @@
 
     <div class="wrap">
         <div class="wrapCenter">
-            <div class="title">
-                尋喵啟事
-                <span>SHOPPING STORE</span>
-            </div>
+            <h2 class="title">
+                商品
+                <span>PRODUCT</span>
+            </h2>
 
             <br>
             <br>
@@ -144,7 +144,7 @@
                         <div>
                             <span id="Friskies" class="addButton">
                                 加入購物車
-                                <input type="hidden" value="Friskies雞肉罐頭|food1.png|560">
+                                <input type="hidden" value="Friskies雞肉罐頭|1.jpg|560">
                             </span>
 
                             <span class="addButton">
