中途 ajax 搜尋完成

--- a/html/halfway_house_search.html
+++ b/html/halfway_house_search.html
@@ -69,17 +69,16 @@
     </header>
     <div class="right">
         <h2 id="qqq">搜尋中途之家</h2>
-
             <div class="searchsection">
                 <div class="container">
                     <div class="formInsert">
                         <select name="searchLoc" class="select defaultBtn" id="searchLoc">
                             <option>地區</option>
-                            <option value="north">北部</option>
-                            <option value="center">中部</option>
-                            <option value="south">南部</option>
-                            <option value="east">東部</option>
-                            <option value="out">離島</option>
+                            <option value="北部">北部</option>
+                            <option value="中部">中部</option>
+                            <option value="南部">南部</option>
+                            <option value="東部">東部</option>
+                            <option value="離島">離島</option>
                         </select>
                         <input type="text" name="searchName" id="searchName" class="searchBar condition1" placeholder="喜歡的中途之家的名字">
                         <button class="searchBtn defaultBtn" id="searchBtn">
@@ -141,14 +140,14 @@
             
             let searchLoc = document.getElementById('searchLoc').value;
             let searchName = document.getElementById('searchName').value;
-            alert(searchLoc !== '地區' || searchName !== '');
+
             if(searchLoc !== '地區' || searchName !== ''){
                 if(searchLoc === '地區'){
-                    getData(searchName);
+                    getData('searchName=' + searchName);
                 }else if(searchName === ''){
-                    getData(searchLoc);
+                    getData('searchLoc=' +searchLoc);
                 }else{
-                    getData('searchLoc' + searchLoc + 'searchName=' + searchName);
+                    getData('searchLoc=' + searchLoc + '&' + 'searchName=' + searchName);
                 }
             }
         }
