--- a/html/guide.html
+++ b/html/guide.html
@@ -7,20 +7,33 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>尋喵啟事</title>
     <link rel="stylesheet" href="../css/guide.css">
+    <script src="../js/jquery-2.1.1.min.js"></script>
 </head>
+
 <body>
+    <div class="svg-space">
+        <div id="logo"></div>
+    </div>
     <div class="guide">
         <a href="../index.php">
             <div class="front">
-                <img src="../images/guideFront.png" alt="rotate cat">
+                <div class="watch">
+                    <img src="../images/guideFront.png" alt="rotate cat">
+                    <div class="anchor">前端</div>
+                </div>
             </div>
         </a>
         <a href="./backMemManage.php">
             <div class="backed">
-                <img src="../images/guideBacked.png" alt="rotate cat">
+                <div class="watch">
+                    <img src="../images/guideBacked.png" alt="rotate cat">
+                    <div class="anchor">後台</div>
+                </div>
             </div>
         </a>
     </div>
+    <script src="../js/jquery.lazylinepainter-1.7.0.min.js"></script>
+    <script src="../js/guideSvg.js"></script>
 </body>
 
 </html>
