登入session變成NO了

--- a/html/header+lightbox.html
+++ b/html/header+lightbox.html
@@ -122,7 +122,7 @@
             <i class="fa fa-shopping-cart fa-2x" aria-hidden="true"></i>
         </a>
         <?php
-                    if(isset($_SESSION["MEM_ID"]) || isset($_SESSION["HALF_ID"])){
+                    if(isset($_SESSION["MEM_NO"]) || isset($_SESSION["HALF_NO"])){
 
                         echo "<a href='php/memberLogOut.php'>
                             <i class='fa fa-sign-out fa-2x' aria-hidden='true'></i>
