--- a/html/backProduct.html
+++ b/html/backProduct.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -54,119 +53,113 @@
                     <table>
                         <tr class="newEmpTR newEmpTROff">
                             <th>商品名稱</th>
-                            <td><input type="text"></td>
+                            <td>
+                                <input type="text">
+                            </td>
+                        </tr>
+                        <tr class="newEmpTR newEmpTROff">
+                            <th>商品分類</th>
+                            <td>
+                                <select name="" id="">
+                                    <option>請選擇</option>
+                                    <option value="喵喵肚子餓">喵喵肚子餓</option>
+                                    <option value="喵喵待在家">喵喵待在家</option>
+                                    <option value="精選喵草">精選喵草</option>
+                                    <option value="喵喵愛玩耍">喵喵愛玩耍</option>
+                                </select>
+                            </td>
                         </tr>
                         <tr class="newEmpTR newEmpTROff">
                             <th>商品價錢</th>
-                            <td><input type="text"></td>
-                        </tr>
-                        <tr class="newEmpTR newEmpTROff">
-                            <th>商品特色</th>
-                            <td><textarea name="" id="" cols="40" rows="10"></textarea></td>
+                            <td>
+                                <input type="text">
+                            </td>
                         </tr>
                         <tr class="newEmpTR newEmpTROff">
                             <th>商品規格</th>
-                            <td><textarea name="" id="" cols="40" rows="10"></textarea></td>
+                            <td>
+                                重量<input type="text"><br>
+                                產地<input type="text"><br>
+                                成分<input type="text"><br>
+                                尺寸<input type="text">
+                            </td>
                         </tr>
                         <tr class="newEmpTR newEmpTROff">
                             <th>商品敘述</th>
-                            <td><textarea name="" id="" cols="40" rows="10"></textarea></td>
+                            <td>
+                                <textarea name="" id="" cols="40" rows="15"></textarea>
+                            </td>
                         </tr>
                         <tr class="newEmpTR newEmpTROff">
                             <th>商品圖片(最多可選擇三張)</th>
-                            <td><input type="file" multiple="multiple"></td>
+                            <td>
+                                <input type="file" multiple="multiple">
+                            </td>
                         </tr>
                         <tr class="newEmpTR newEmpTROff">
                             <td colspan="2">
-                                <input type="submit" value="確認新增" id="ensureBtn">
-                                <input type="reset" value="清除內容">
+                                <button type="submit" id="ensureBtn">確認新增</button>
+                                <button type="reset">清除內容</button>
                             </td>
                         </tr>
                 </form>
-                <form action="#">
-                    <table>
-                        <tr>
-                            <th>商品編號</th>
-                            <th>商品名稱</th>
-                            <th>商品價錢</th>
-                            <th>商品狀態</th>
-                            <th>管理商品狀態</th>
-                        </tr>
-                        <tr>
-                            <td>001</td>
-                            <td>
-                                <input type="text" placeholder="Friskies 雞肉罐頭">
-                            </td>
-                            <td>
-                                <input type="text" placeholder="$500">
-                            </td>
-                            <td>已上架</td>
-                            <td>
-                                <i class="fa fa-trash" aria-hidden="true"></i>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>002</td>
-                            <td>
-                                <input type="text" placeholder="Friskies 豬肉罐頭">
-                            </td>
-                            <td>
-                                <input type="text" placeholder="$600">
-                            </td>
-                            <td>已下架</td>
-                            <td>
-                                <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
-                            </td>
-                        </tr>
-                    </table>
-                </form>
-                <a href="#" class="defaultBtn">1</a>
-                <a href="#" class="defaultBtn">2</a>
-                <a href="#" class="defaultBtn">3</a>
-                <a href="#" class="defaultBtn">4</a>
-                <a href="#" class="defaultBtn">5</a>
+                <table>
+                    <tr>
+                        <th>商品編號</th>
+                        <th>商品名稱</th>
+                        <th>商品價錢</th>
+                        <th>商品狀態</th>
+                        <th>管理商品狀態</th>
+                    </tr>
+                    <tr>
+                        <td>001</td>
+                        <td>
+                            <input type="text" placeholder="Friskies 雞肉罐頭">
+                        </td>
+                        <td>
+                            <input type="text" placeholder="$500">
+                        </td>
+                        <td>已上架</td>
+                        <td>
+                            <i class="fa fa-trash" aria-hidden="true"></i>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>002</td>
+                        <td>
+                            <input type="text" placeholder="Friskies 豬肉罐頭">
+                        </td>
+                        <td>
+                            <input type="text" placeholder="$600">
+                        </td>
+                        <td>已下架</td>
+                        <td>
+                            <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
+                        </td>
+                    </tr>
+                </table>
             </div>
         </div>
-
     </div>
     <script>
         window.addEventListener('load', function () {
             let newEmp = document.getElementById('newEmp');
             newEmp.addEventListener('click', function newEmp() {
-                let tr = document.getElementsByClassName('newEmpTR')
-                if (tr[0].className.match('newEmpTROff') && tr[1].className.match('newEmpTROff')) {
-                    tr[0].className =
-                        tr[0].className.replace('newEmpTROff', 'newEmpTROn')
-                    tr[1].className =
-                        tr[1].className.replace('newEmpTROff', 'newEmpTROn')
-                    tr[2].className =
-                        tr[2].className.replace('newEmpTROff', 'newEmpTROn')
-                    tr[3].className =
-                        tr[3].className.replace('newEmpTROff', 'newEmpTROn')
-                    tr[4].className =
-                        tr[4].className.replace('newEmpTROff', 'newEmpTROn')
-                    tr[5].className =
-                        tr[5].className.replace('newEmpTROff', 'newEmpTROn')
-                    tr[6].className =
-                        tr[6].className.replace('newEmpTROff', 'newEmpTROn')
-                    newEmp.innerText = '取消新增商品'
+                let tr = document.getElementsByClassName('newEmpTR');
+                if (tr[0].className.match('newEmpTROff')) {
+                    for (let i = 0; i < tr.length; i++) {
+                        tr[i].className =
+                            tr[i].className.replace('newEmpTROff', 'newEmpTROn');
+                    }
+                    let newEmp = document.getElementById('newEmp');
+                    newEmp.innerHTML = "取消新增商品";
                 } else {
-                    tr[0].className =
-                        tr[0].className.replace('newEmpTROn', 'newEmpTROff')
-                    tr[1].className =
-                        tr[1].className.replace('newEmpTROn', 'newEmpTROff')
-                    tr[2].className =
-                        tr[2].className.replace('newEmpTROn', 'newEmpTROff')
-                    tr[3].className =
-                        tr[3].className.replace('newEmpTROn', 'newEmpTROff')
-                    tr[4].className =
-                        tr[4].className.replace('newEmpTROn', 'newEmpTROff')
-                    tr[5].className =
-                        tr[5].className.replace('newEmpTROn', 'newEmpTROff')
-                    tr[6].className =
-                        tr[6].className.replace('newEmpTROn', 'newEmpTROff')
-                    let newEmp = document.getElementById('newEmp')
-                    newEmp.innerText = '新增商品'
+                    for (let i = 0; i < tr.length; i++) {
+                        tr[i].className =
+                            tr[i].className.replace('newEmpTROn', 'newEmpTROff');
+                    }
+                    let newEmp = document.getElementById('newEmp');
+                    newEmp.innerHTML = "新增商品";
                 }
             })
             let ensureBtn = document.getElementById('ensureBtn')
