--- a/html/halfMem.html
+++ b/html/halfMem.html
@@ -184,7 +184,8 @@
 </script>
 <script>
     let newEmp = document.getElementById('newEmp');
-    newEmp.addEventListener('click', function() {
+    newEmp.addEventListener('click', function () {
+        console.log("1231213213");
         let tr = document.getElementsByClassName('newEmpTR');
         if (tr[0].className.match('newEmpTROff')) {
             for (let i = 0; i < tr.length; i++) {
