--- a/html/halfMem.html
+++ b/html/halfMem.html
@@ -25,7 +25,7 @@
                     <a href="catSearch.html">尋喵</a>
                 </li>
                 <li>
-                    <a href="halfway_house_search.html">中途之家</a>
+                    <a href="halfway_house_search.php">中途之家</a>
                 </li>
                 <li>
                     <a href="Cat_ShoppingStore.html" title="前往商城">商城</a>
@@ -74,10 +74,10 @@
                         <li onclick="getData('halfMemOrderlist.php');" class="li">
                             <i class="fa fa-chevron-circle-right" aria-hidden="true"></i> 查詢訂單記錄
                         </li>
-                        <li onclick="getData('halfMemAdobtRecord.php');" class="li">
+                        <li onclick="getData('halfMemAdoptRecord.php');" class="li">
                             <i class="fa fa-chevron-circle-right" aria-hidden="true"></i> 查詢領養紀錄
                         </li>
-                        <li onclick="getData('halfMemAdobt.php');" class="li">
+                        <li onclick="getData('halfMemAdopt.php');" class="li">
                             <i class="fa fa-chevron-circle-right" aria-hidden="true"></i> 審核領養案件
                         </li>
                     </ul>
@@ -101,10 +101,10 @@
                     <li onclick="getData('halfMemOrderlist.php');" class="li">
                         查詢訂單記錄
                     </li>
-                    <li onclick="getData('halfMemAdobtRecord.php');" class="li">
+                    <li onclick="getData('halfMemAdoptRecord.php');" class="li">
                         查詢領養紀錄
                     </li>
-                    <li onclick="getData('halfMemAdobt.php');" class="li">
+                    <li onclick="getData('halfMemAdopt.php');" class="li">
                         審核領養案件
                     </li>
                 </ul>
