--- a/html/guide.html
+++ b/html/guide.html
@@ -23,7 +23,7 @@
                 </div>
             </div>
         </a>
-        <a href="./backMemManage.php">
+        <a href="./backIndex.html">
             <div class="backed">
                 <div class="watch">
                     <img src="../images/guideBacked.png" alt="rotate cat">
