首頁改名 index.php ->  homepage.php

--- a/html/guide.html
+++ b/html/guide.html
@@ -15,7 +15,7 @@
         <div id="logo"></div>
     </div>
     <div class="guide">
-        <a href="../index.php">
+        <a href="../homepage.php">
             <div class="front">
                 <div class="watch">
                     <img src="../images/guideFront.png" alt="rotate cat">
