--- a/html/header+lightbox.html
+++ b/html/header+lightbox.html
@@ -92,7 +92,7 @@
 <!-- header -->
 <header>
     <div class="logo">
-        <a href="index.php">
+        <a href="homepage.php">
             <h1>
                 <img src="images/logo_white.png" alt="尋喵啟事" title="回首頁">
             </h1>
