--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </div>
             </div>
         </a>
-        <a href="./backIndex.html">
+        <a href="./html/backIndex.html">
             <div class="backed">
                 <div class="watch">
                     <img src="./images/guideBacked.png" alt="rotate cat">
